--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	min-width: 100%;
+	min-height: 100%;
+	
 	background: black;
 }
 
